--- a/index.html
+++ b/index.html
@@ -135,6 +135,8 @@
 
 
 <!-- ---------------------------Scripts ---------------------------------->
+    <!--  Jquery js file  -->
+    <script src="./js/jquery.3.4.1.js"></script>
     <!--  Bootstrap js file  -->
     <script src="./js/bootstrap.min.js"></script>
      <!--  Main js file  -->
